Bug 161154 - Text rendering problem in 24.8 on Windows with Skia disabled
Summary: Text rendering problem in 24.8 on Windows with Skia disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-05-17 15:38 UTC by Mike Kaganski
Modified: 2024-05-18 09:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A fit-to-size text sample (2.86 KB, application/vnd.oasis.opendocument.graphics)
2024-05-17 15:38 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-05-17 15:38:21 UTC
Created attachment 194178 [details]
A fit-to-size text sample

After commit 85c82ad23c64db500e607a3ffb76e3aebfb18102 (tdf#160901: partially revert 8557ea84c9336ba8061246f1f46ddb6e02f413a1, 2024-03-03), the attachment is rendered incorrectly: its text "itititititititititititititi2" gets truncated at some random place, so that it doesn't show the trailing "2", and actually ends with either "i" or "t", depending on zoom.
Comment 1 Mike Kaganski 2024-05-17 15:40:13 UTC
The problem is specific to Windows default renderer, i.e. with Skia disabled.
Comment 2 Mike Kaganski 2024-05-17 15:51:15 UTC
https://gerrit.libreoffice.org/c/core/+/167786
Comment 3 m_a_riosv 2024-05-17 17:59:08 UTC
Seems the space between letters is different, even the pair kerning is 0 on both.

Clicking on the text to edit and using left or right arrow shows the text fine. Clicking outside the text the rendering is bad again.

Reproducible
Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 658a212585c56540a17c41111e6829716d4ef4e3
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2024-05-18 09:04:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2092df2a9044f1c2ae4379f48a3201e5867575a8

tdf#161154: pass "scaling is done externally" information down the stack

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.